# Nilib

./: .gitignore  .gitmodules  Args.h  BenchMark.R  CMakeLists.txt  Color.cpp  Color.h  Graph.h  Log.hpp  Matrix.cpp  ODEtest.R  ODEtest.csv  README.md  RNG.hpp  TrainingReader.R  Window.cpp  Window.hpp  build.bat  buildandtest.bat  buildandtest.sh  model_GRB.mps  model_HiGHS.mps
Legacy/ML/Include/: CNode Static.h
Legacy/ML/Include/Layers/: BatchNorm.hpp  Dense.hpp  GraphConv.hpp  OuterDecoder.hpp
Legacy/ML/source/: ComputationalGraphStatic.cpp  ComputationalGraphStatic2.cpp  MLP.hpp
Legacy/ML/source/ML/: NeuralNet.cpp
Legacy/ML/source/ML/Layers/: BatchNorm.cpp  OuterDecoder.cpp
examples/: ALNSdemo.cpp  AdvancedTriangle.cpp  ArgParser.cpp  Benchmark.cpp  CMakeLists.txt  CSV.cpp  ComputationalGraph.cpp  Enum.cpp  GNN.cpp  Graph.cpp  GraphExample.cpp  LinALg.cpp  Logger.cpp  MixedIntegerLinearProgram.cpp  MultipleWindows.cpp  NeuralNet_Sum.cpp  NeuralNet_XOR.cpp  ODE.cpp  ODEtest.R  OnlineStatistics.cpp  Persistent.cpp  Profiler.cpp  RNG.cpp  Renderer.cpp  StaticAnalysis.cpp  Structures.cpp  Triangle.cpp
include/: ArgParser.h  ArgParser.hpp  Color.h  Graph.h  Graph.hpp  Log.hpp  RNG.hpp  Window.hpp
include/Core/: ArgParser.hpp  Assert.h  Config.hpp  Deserializer.hpp  Serializer.hpp
include/ML/: NeuralNet.hpp  Optimizer.hpp
include/ML/Layers/: Activations.hpp  BatchNorm.hpp  Dense.hpp  Dropout.hpp  GraphConv.hpp  GraphPool.hpp  NeuralLayer.hpp  OuterDecoder.hpp
include/Math/: BeamSearch.hpp  Mat.hpp  Matrix.hpp  RNG.hpp
include/Nilib/: Nilib.h  Nilibpch.h
include/Nilib/Core/: ArgParser.hpp  Assert.h  Assert.hpp  BaseLogger.h  Benchmark.hpp  Config.hpp  Deserializer.hpp  Enum.hpp  Log.hpp  LogPool.hpp  Logger.h  Loggers.hpp  Memory.hpp  Profiler.hpp  Serializer.hpp  Signal.hpp
include/Nilib/Logger/: BaseLogger.h  CSV.hpp  Log.hpp  LogPool.hpp  Logger.hpp  Loggers.hpp
include/Nilib/ML/: Data.h  ML.h  ML.hpp  MLData.h  MLData.hpp  MLEnv.h  MLP.h  Model.h  NeuralNet.hpp  Optimizer.hpp  Supervised.hpp
include/Nilib/ML/CNodes/: CNode.h  CNode.hpp  Concat.cpp  Concat.h  Concat.hpp  GNode.hpp  Gates.hpp  GaussianNoise.cpp  GaussianNoise.h  GaussianNoise.hpp  Input.h  Input.hpp  Multiply.h  Param.h  Param.hpp  Plus.h  Target.h  Weight.h
include/Nilib/ML/CNodes/Activation/: Activation.h  Activation.hpp  Linear.hpp  Log.h  Log.hpp  NegRelu.h  NegRelu.hpp  RBF.h  RBF.hpp  Relu.h  Relu.hpp  Selu.h  Selu.hpp  Sigmoid.h  Sigmoid.hpp  Square.hpp  Tanh.h  Tanh.hpp
include/Nilib/ML/CNodes/Layer/: DenseLayer.h  GraphConv.hpp  GraphConvHighWay.hpp  GraphLayer.h  GraphOuterDecoder.hpp  GraphOuterDecoderWeight.hpp  GraphPool.hpp  Norm.cpp  Norm.h  Pool.hpp
include/Nilib/ML/CNodes/Loss/: CrossEntropy.hpp  MSE.h  MSE.hpp
include/Nilib/ML/CNodes/Regularizer/: L1.h  L2.h  Regularizer.h
include/Nilib/ML/Layers/: Activations.hpp  BatchNorm.hpp  Dense.hpp  Dropout.hpp  GraphConv.hpp  GraphPool.hpp  NeuralLayer.hpp  OuterDecoder.hpp
include/Nilib/ML/Models/: Model.h  Model.hpp  MultiLayerPerceptron.hpp  NeuralNet.hpp  Perceptron.hpp
include/Nilib/ML/Optimizers/: Adam.hpp  GradientDescent.hpp  Momentum.hpp  Optimizer.hpp  Random.hpp
include/Nilib/ML2/: CNode.h
include/Nilib/Math/: ALNS.hpp  BeamSearch.hpp  LinAlg.hpp  LinAlgFunctions.hpp  Mat.hpp  Matrix.h  Matrix.hpp  MatrixStorage.hpp  ODE.hpp  PartialRoute.hpp  RNG.hpp  RNG2.hpp  Stats.hpp
include/Nilib/Optimization/: GurobiBackend.hpp  HighsBackend.hpp  MixedIntegerLinearProgram.hpp
include/Nilib/Renderer/: Camera.h  Color.h  Keys.h  Renderer.h  ShaderProgram.h  Window.hpp
include/Nilib/Structures/: AdjacencyList.hpp  Circular.hpp  CircularBuffer.hpp  DenseGraph.hpp  Graph.hpp  GraphFunctions.hpp  GraphRepresentation.hpp  Persistent.hpp  SparseGraph.hpp  StackVector.hpp  VRPInstance.hpp  VRPSolution.hpp  WeightedGraph.hpp
include/Renderer/: Color.h  Window.hpp
lib/GUROBI/: gurobi100.lib  gurobi_cpp.lib  gurobi_cpp_lin.lib
scripts/: NetworkTrainingSupervisedView.R
shaders/: fragment.hlsl  quad.vert  vertex.hlsl  vertex.vert
source/: CMakeLists.txt  Color.cpp  Matrix.cpp  Nilibpch.cpp  Window.cpp
source/Core/: ArgParser.cpp  LogPool.cpp  Memory.cpp  Profiler.cpp  Signal.cpp
source/Logger/: LogPool.cpp
source/ML/: Data.cpp  MLData.cpp  MLEnv.cpp  MLP.cpp  Model.cpp  NeuralNet.cpp
source/ML/CNodes/: CNode.cpp  Concat.cpp  GNode.cpp  Gates.cpp  GaussianNoise.cpp  Input.cpp  Param.cpp  Weight.cpp
source/ML/CNodes/Activation/: Log.cpp  RBF.cpp  Sigmoid.cpp  Square.cpp  Tanh.cpp
source/ML/CNodes/Layer/: GraphConv.cpp  GraphConvHigh.cpp  GraphOuterDecoder.cpp  GraphOuterDecoderWeight.cpp  GraphPool.cpp  Pool.cpp
source/ML/CNodes/Loss/: CrossEntropy.cpp  MSE.cpp
source/ML/Layers/: Activations.cpp  BatchNorm.cpp  Dense.cpp  Dropout.cpp  GraphConv.cpp  GraphPool.cpp  OuterDecoder.cpp
source/ML/Models/: MultiLayerPerceptron.cpp  NeuralNet.cpp  Perceptron.cpp
source/ML/Optimizers/: Adam.cpp  GradientDescent.cpp  Momentum.cpp  Optimizer.cpp
source/ML2/: NeuralNet.cpp
source/ML2/Layers/: Activations.cpp  Dense.cpp  OuterDecoder.cpp
source/Math/: BeamSearch.cpp  RNG.cpp  Stats.cpp
source/Optimization/: GurobiBackend.cpp  HighsBackend.cpp  MixedIntegerLinearProgram.cpp
source/Renderer/: Color.cpp  Renderer.cpp  ShaderProgram.cpp  Window.cpp
source/Structures/: AdjacencyList.cpp  DenseGraph.cpp  Graph.cpp  GraphFunctions.cpp  GraphRepresentation.cpp  SparseGraph.cpp  VRPInstance.cpp  VRPSolution.cpp  WeightedGraph.cpp
tests/: CMakeLists.txt  Glad.cpp  TestGlad.cpp  TestTriangle.cpp  TestVersion.cpp  Triangle.cpp  Version.cpp
