# Define the example executables
add_executable(NeuralNet_XOR NeuralNet_XOR.cpp)
add_executable(Triangle Triangle.cpp)
add_executable(AdvancedTriangle AdvancedTriangle.cpp)
add_executable(GraphExample GraphExample.cpp)
add_executable(Profiler Profiler.cpp)
add_executable(ArgParse ArgParser.cpp)
add_executable(OnlineStatistics OnlineStatistics.cpp)
add_executable(Logger Logger.cpp)
add_executable(MultipleWindows MultipleWindows.cpp)
add_executable(LinAlg LinAlg.cpp)
add_executable(RNG2 RNG.cpp)
add_executable(CSV CSV.cpp)
add_executable(ComputationalGraph ComputationalGraph.cpp)
add_executable(ODE ODE.cpp)
add_executable(ALNS ALNSdemo.cpp)

# Link the static library to the example executable
target_link_libraries(Triangle PUBLIC Nilib)
target_link_libraries(AdvancedTriangle PUBLIC Nilib)
target_link_libraries(ArgParse PUBLIC Nilib)
target_link_libraries(NeuralNet_XOR PUBLIC Nilib)
target_link_libraries(GraphExample PUBLIC Nilib)
target_link_libraries(Profiler PUBLIC Nilib)
target_link_libraries(Logger PUBLIC Nilib)
target_link_libraries(MultipleWindows PUBLIC Nilib)
target_link_libraries(LinAlg PUBLIC Nilib)
target_link_libraries(RNG2 PUBLIC Nilib)
target_link_libraries(OnlineStatistics PUBLIC Nilib)
target_link_libraries(ComputationalGraph PUBLIC Nilib)
target_link_libraries(CSV PUBLIC Nilib)
target_link_libraries(ODE PUBLIC Nilib)
target_link_libraries(ALNS PUBLIC Nilib)
